Readme, license, CICD pipeline